--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Overlock+SC&display=swap');
+
+/* 
+font-family: 'Cairo', sans-serif;
+font-family: 'Khand', sans-serif;
+font-family: 'Montserrat Alternates', sans-serif;
+font-family: 'Orbitron', sans-serif; */
 :root {
   --color-line: linear-gradient(90deg, rgb(255, 138, 4), #000);
   --color-line2: linear-gradient(135deg, rgb(250, 9, 129), #000);
@@ -62,6 +69,8 @@ button {
   width: 100vw;
   height: 100%;
   color: #fff;
+  font-size: 20px;
+  font-family: 'Overlock SC', cursive;
   background: var(--main-background);
   box-sizing: border-box;
   overflow: hidden;
@@ -698,6 +707,8 @@ button {
 }
 
 .services {
+  font-size: initial;
+  font-family: 'Montserrat Alternates', sans-serif;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -748,6 +759,8 @@ button {
 }
 /*  project section */
 .projects {
+  font-family: 'Montserrat Alternates', sans-serif;
+  font-size: initial;
   display: flex;
   flex-direction: column;
   background: linear-gradient(
